fix: role icon clipping on smaller devices

--- a/src/app/shared/components/agent-card/agent-card.component.scss
+++ b/src/app/shared/components/agent-card/agent-card.component.scss
@@ -11,13 +11,13 @@
   position: absolute;
   display: flex;
   align-items: center;
-  width: calc(100% - 10px);
+  width: calc(100% - 20px);
   bottom: 0;
   padding: 10px;
   align-items: flex-end;
-  img {
-    max-width: 20px;
+  .role-img {
     margin-left: auto;
+    max-width: 20px;
   }
   h2 {
     font-family: "valorant";
